--- a/config/includes.chroot_after_packages/etc/skel/.config/spectrwm/spectrwm.conf
+++ b/config/includes.chroot_after_packages/etc/skel/.config/spectrwm/spectrwm.conf
@@ -1,9 +1,14 @@
 # BAR SETTINGS
-bar_enabled = 0
+bar_enabled = 1
+bar_at_bottom = 1
+bar_border = rgb:00/77/ff
+bar_font_color = rgb:00/de/ff
+bar_border_width = 1
 bar_justify = center
 bar_color_selected = rgb:0/9f/ff
 bar_color = rgb:00/00/00
-bar_format = +|C+<Workspace:+<+I+<||+<Running:+<+W
+bar_format = +|L[Workspace:+<+I]+<[Process:+<+P]+<+|R+A
+bar_action = conky
 
 # WORKSPACE STUFF
 workspace_limit = 10
@@ -27,4 +32,4 @@ autorun = ws[1]:picom -b
 autorun = ws[1]:nitrogen --restore
 
 # Region
-region = screen[1]:1920x1080+0+0
+#region = screen[1]:1920x1080+0+0
