--- a/config/includes.chroot_after_packages/etc/skel/.config/spectrwm/spectrwm.conf
+++ b/config/includes.chroot_after_packages/etc/skel/.config/spectrwm/spectrwm.conf
@@ -1,11 +1,11 @@
 # BAR SETTINGS
 bar_enabled = 1
-bar_at_bottom = 0
+bar_at_bottom = 1
 bar_border = rgb:00/77/ff
 bar_font_color = rgb:00/de/ff
 bar_border_width = 1
 bar_justify = center
-bar_color_selected = rgb:0/9f/ff
+bar_color_selected = rgb:00/9f/ff
 bar_color = rgb:00/00/00
 bar_format = +|L[Workspaces:+<+L]+<[Process:+<+P]+<+|R+A
 bar_action = conky
@@ -38,3 +38,6 @@ autorun = ws[1]:trayer --widthtype request --heighttype request --edge right --a
 # Region
 #region = screen[1]:1920x1080+0+0
 
+# Custom programs (to replace spectrwm defaults)
+program[menu] = /usr/bin/rofi -show run
+program[term] = kitty
