--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ source*.tar*
 source*.contents
 source*.packages
 source*.zsync
+
+config/includes.chroot_after_packages/etc/skel/SuaveOS/Shadowsocks/*
