Working Python scripts.

--- a/config/includes.chroot_after_packages/etc/skel/.config/kitty/kitty.conf
+++ b/config/includes.chroot_after_packages/etc/skel/.config/kitty/kitty.conf
@@ -39,3 +39,6 @@ color15  #ffffff
 # Cursor settings
 cursor #00abff
 cursor_shape block
+
+# Copy text in terminal on highlight
+copy_on_select yes
