--- a/config/includes.chroot_after_packages/etc/skel/.config/spectrwm/spectrwm.conf
+++ b/config/includes.chroot_after_packages/etc/skel/.config/spectrwm/spectrwm.conf
@@ -30,10 +30,11 @@ tile_gap = 10
 # Autoruns
 autorun = ws[1]:picom -b
 autorun = ws[1]:nitrogen --restore
-autorun = ws[1]:nm-applet
-autorun = ws[1]:blueman-applet
-autorun = ws[1]:pasystray
-autorun = ws[1]:trayer --widthtype request --heighttype request --edge right --align center --SetDockType true --transparent true --alpha 0 --tint 0x000000 --iconspacing 8 --padding 3 --SetPartialStrut true
+autorun = ws[2]:nm-applet
+autorun = ws[2]:blueman-applet
+autorun = ws[2]:pasystray
+autorun = ws[2]:ibus-daemon
+autorun = ws[2]:trayer --widthtype request --heighttype request --edge right --align center --SetDockType true --transparent true --alpha 0 --tint 0x000000 --iconspacing 8 --padding 3 --SetPartialStrut true
 
 # Region
 #region = screen[1]:1920x1080+0+0
